# usbdux

./: README.md
1ch-bioamp/: COPYING  README.md  bom.ods  bom.odt  bom.txt  eagle.epf  eeg.brd  eeg.drl  eeg.sch
8ch-bioamp/: README.md  bio_sigma.brd  bom.ods
8ch-bioamp/bio_sigma-1.2/: LICENSE  bio_sigma.sch
bioamp/: README.md
comedirecord/: README
cpp-usbdux/: CMakeLists.txt  README.md  cpp-usbdux.h  print2screen_demo.cpp
docs/: index.html  style.css
docs/duxfast/: index.html
docs/duxsigma/: index.html
docs/usbdux/: index.html
ico-learning/: CMakeLists.txt  Makefile  README  README.md  main.cpp
ico-learning/icolearning/: 10filt_high_weights.plt  10filt_highest_weights.plt  Makefile  README  demo.cpp  icolearning.cpp  icolearning.h  onef_high_weights.plt  onef_highest_weights.plt  onef_low_weights.plt  trace.cpp  trace.h
mech/: README.md  pp78_drill.dxf  pp78_drill_a.dxf  pp78_drill_b.dxf  pp78_drill_c.dxf  pp78_drill_cnc.dxf  pp78_drill_d.dxf  sideview_a.ps  sideview_b.ps  sideview_c.ps  sideview_d.ps  topview.ps
pyusbdux/: MANIFEST.in  README.rst  pyusbdux.i  setup.py
pyusbdux/examples/: digital_in.py  output_wave.py  printdata_from_usbdux.py  realtime_plot.py  realtime_two_channel_scope.py
robot-power-amp/: README.md  runbot.brd
runbot-power-amp/: README.md  runbot.sch
usbdux-d/: README.md
usbdux-d/code_examples/: Makefile  README  cmd.c  cmd_gnuplot.plt  cmd_gnuplot.sh  dout.c  dout_loop.sh  info.c  inp.c  pwm.c  test_di.sh  test_inp.sh
usbdux-d/hardware/: README.md  usbdux.brd  (+16 more)
usbdux-fast/: README.md
usbdux-sigma/: README.md
(+70 files in other folders)
